ressaltando texto sobre mim

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
         <div>
           <img src="assets/timeLine.png" alt="linha do tempo tecnologia eu" />
         </div>
-        <p>
-          Olá, meu nome é Gustavo Gomes da Silva, tenho 19 anos e atualmente,
+        <p class="fade-in">
+          Olá, meu nome é Gustavo Gomes da Silva, tenho 19 anos, gosto muito de 
+          escutar música, assistir séries e jogar videio-game. Atualmente,
           estou estudando Análise e desenvolvimento de sistemas, pela SPTECH e
           estou no último semstre de desenvolvimento de sistemas pela Etec de
           Itaquera. Desde pequeno tenho interesse por tecnologia, e em 2021
@@ -123,7 +124,8 @@
           desenvolvimento de sistemas, no mesmo ano, entrei para o instituto
           PROA, que tem parceria com o Senac, e me formei em programação web
           java, e como já disse, atualemente continuo estudando, estou no último
-          semestre da Etec, e no primeiro da SPTECH.
+          semestre da Etec, e no primeiro da SPTECH. <br>
+          E quero seguir nessa área, preferencialmente, trabalhando para fora.
         </p>
       </section>
       <a name="Contatos"></a>
