adicionando minha foto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- klinkando fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,7 +39,9 @@
             <h3>FrontEnd Developer</h3>
           </div>
           <div id="btnsTopo">
-            <a href="assets/CurriculoGustavo.pdf" download=""><button>Currículo</button></a>
+            <a href="assets/CurriculoGustavo.pdf" download=""
+              ><button>Currículo</button></a
+            >
             <a href="#Contatos"><button>Contatos</button></a>
           </div>
         </article>
@@ -100,11 +102,11 @@
               </div>
             </a>
           </div>
-           <div class="cardBaixo">
-              <div class="fade-in">
-                <img src="assets/voidTech.png" alt="logo scienceTech" />
-              </div>
+          <div class="cardBaixo">
+            <div class="fade-in">
+              <img src="assets/voidTech.png" alt="logo scienceTech" />
             </div>
+          </div>
         </article>
       </section>
       <a name="Sobre"></a>
@@ -113,20 +115,28 @@
         <div>
           <img src="assets/timeLine.png" alt="linha do tempo tecnologia eu" />
         </div>
-        <p class="fade-in">
-          Olá, meu nome é Gustavo Gomes da Silva, tenho 19 anos, gosto muito de 
-          escutar música, assistir séries e jogar videio-game. Atualmente,
-          estou estudando Análise e desenvolvimento de sistemas, pela SPTECH e
-          estou no último semstre de desenvolvimento de sistemas pela Etec de
-          Itaquera. Desde pequeno tenho interesse por tecnologia, e em 2021
-          comecei a estudar programação por conta própria, vendo videoaulas e
-          lendo sobre, ja em 2022 entrei para a Etec de itaquera para estudar
-          desenvolvimento de sistemas, no mesmo ano, entrei para o instituto
-          PROA, que tem parceria com o Senac, e me formei em programação web
-          java, e como já disse, atualemente continuo estudando, estou no último
-          semestre da Etec, e no primeiro da SPTECH. <br>
-          E quero seguir nessa área, preferencialmente, trabalhando para fora.
-        </p>
+        <article>
+          <div id="eu">
+            <img src="assets/foto.jpeg" alt="foto minha" />
+            <p>
+              Olá, meu nome é Gustavo Gomes da Silva, tenho 19 anos, gosto muito
+              de escutar música, assistir séries e jogar videio-game.
+              Atualmente, estou estudando Análise e desenvolvimento de sistemas,
+              pela SPTECH e estou no último semstre de desenvolvimento de
+              sistemas pela Etec de Itaquera.
+            </p>
+          </div>
+          <p class="fade-in">
+            Desde pequeno tenho interesse por tecnologia, e em 2021 comecei a
+            estudar programação por conta própria, assistindo videoaulas e lendo
+            sobre, ja em 2022 entrei para a Etec de itaquera para estudar
+            desenvolvimento de sistemas, no mesmo ano, entrei para o instituto
+            PROA, que tem parceria com o Senac, e me formei em programação web
+            java, e como já disse, atualemente continuo estudando, estou no
+            último semestre da Etec, e no primeiro da SPTECH. <br />
+            E quero seguir nessa área, preferencialmente, trabalhando para fora.
+          </p>
+        </article>
       </section>
       <a name="Contatos"></a>
       <footer>
