--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
               </div>
             </div>
           </a>
-          <!-- <div id="cardCima">
+          <div id="cardCima">
             <a href="https://indikey-eight.vercel.app/" target="_blank">
               <div class="fade-in">
                 <img src="assets/indikey.png" alt="logo scienceTech" />
               </div>
             </a>
-          </div> -->
+          </div>
           <div class="cardBaixo">
             <div class="fade-in">
               <img src="assets/voidTech.png" alt="logo scienceTech" />
